traefik/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik
  namespace: traefik
spec:
  entryPoints:
    - web
  middlewares:
    - name: default-headers
      namespace: traefik
  routes:
    - kind: Rule
      match: "Host(`traefik-k8s.local`)"
      services:
        - kind: TraefikService
          name: api@internal
    - kind: Rule
      match: "Host(`traefik-k8s.home.diceninjagaming.com`)"
      services:
        - kind: TraefikService
          name: api@internal
